tests/ui/associated-type-bounds/return-type-notation/issue-120208-higher-ranked-const.stderr
error: return type notation is not allowed for functions that have const parameters
  --> $DIR/issue-120208-higher-ranked-const.rs:11:21
   |
LL |     async fn check<const N: usize>() -> bool;
   |                    -------------- const parameter declared here
...
LL |     HC: HealthCheck<check(..): Send> + Send + 'static,
   |                     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

